--- a/ficha.html
+++ b/ficha.html
@@ -127,7 +127,7 @@
                     <div class="bar-label">
                         <span>⚖️ Carga</span>
                         <div class="stat-values">
-                            <span id="valPeso">0</span> / <span id="maxPeso" class="editable-num">20</span> kg
+                            <span id="valPeso">0</span> / <span id="maxPeso" class="editable-num">20</span> PC
                         </div>
                     </div>
                     <div class="progress-track">
@@ -221,7 +221,7 @@
                 
                 <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-top: 10px;">
                     <div>
-                        <label>Peso (kg)</label>
+                        <label>Peso (PC)</label>
                         <input type="number" id="newItemWeight" step="0.1" value="1.0">
                     </div>
                     <div>
